# volume_changer

./: Cargo.toml  README.md
src/: commands.rs  handlers.rs  main.rs  multimedia_helper.rs  next.scpt  test_json.rs
src/handlers/: auxiliary_functions.rs  macos_handler.rs  media_handler.rs  volume_handler.rs  windows_handler.rs
