[package]
name = "volume-changer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7.9", features= ["full"] }
futures = "0.3.28"
bytes = "1.5.0"
rand = "0.8.5"
winput = "0.2.5"
